style: Fix for login page's y overflow
Former-commit-id: c7114ee42548b6b59c3fd754927ba70fa0b7c19b

--- a/packages/web-app/src/style/_login.scss
+++ b/packages/web-app/src/style/_login.scss
@@ -1,9 +1,9 @@
 .login-page {
-  @apply flex content-center justify-center w-5/6 overflow-auto h-full w-full mt-40;
+  @apply flex content-center justify-center w-5/6 overflow-auto h-full w-full;
 }
 
 .login-form {
-  @apply h-64 w-64 flex flex-col justify-center content-center;
+  @apply h-64 w-64 flex flex-col justify-center content-center mt-40;
 }
 
 .login-title {
@@ -11,7 +11,7 @@
 }
 
 @screen lg {
-  .login-page {
+  .login-form {
     @apply mt-64;
   }
 }
